--- a/man/str_to_gensio.3
+++ b/man/str_to_gensio.3
@@ -30,6 +30,30 @@ str_to_gensio, str_to_gensio_child, gensio_acc_str_to_gensio
 .B                   gensio_event cb, void *user_data,
 .br
 .B                   struct gensio **io);
+.TP 20
+.B int gensio_terminal_alloc(const char *gensiotype,
+.br
+.B                   const void *gdata,
+.br
+.B                   const char * const args[],
+.br
+.B                   struct gensio_os_funcs *o,
+.br
+.B                   gensio_event cb, void *user_data,
+.br
+.B                   struct gensio **new_gensio);
+.TP 20
+.B int gensio_filter_alloc(const char *gensiotype,
+.br
+.B                   struct gensio *child,
+.br
+.B                   const char * const args[],
+.br
+.B                   struct gensio_os_funcs *o,
+.br
+.B                   gensio_event cb, void *user_data,
+.br
+.B                   struct gensio **new_gensio);
 .SH "DESCRIPTION"
 .B str_to_gensio
 allocates a new gensio stack based upon the given string
@@ -55,6 +79,21 @@ layers of the accepter.  So, for instance, if the accepter is
 string must be in the form "telnet,ssl(CA=x2),sctp,otherserver,3820"
 The layers are exactly the same, but you can vary the options to
 the layers.
+
+To directly allocation gensios, you can use
+.B gensio_terminal_alloc
+and
+.B gensio_filter_alloc.
+A terminal gensio is one at the bottom of the stack.  The
+.B gdata
+parameter depends on the particular gensio.  For instance, for
+serialdev it is a string specifying the device and serial parameters.
+For stdio it is an argv array.  See gensio.5 under "Direct Allocation"
+for the particular gensio for what gdata is.
+
+A filter gensio is one that has a child.  You can use these two
+functions to allocate a gensio stack directly, not using a string
+format.
 
 The
 .B cb
