--- a/man/str_to_gensio_accepter.3
+++ b/man/str_to_gensio_accepter.3
@@ -25,10 +25,54 @@ str_to_gensio_accepter \- Create a gensio accepter from a string
 .B                            void *user_data,
 .br
 .B                            struct gensio_accepter **acc);
+.TP 20
+.B int gensio_terminal_acc_alloc(const char *gensiotype,
+.br
+.B const void *gdata,
+.br
+.B                            const char * const args[],
+.br
+.B                            struct gensio_os_funcs *o,
+.br
+.B                            gensio_accepter_event cb, void *user_data,
+.br
+.B                            struct gensio_accepter **accepter);
+.TP 20
+.B int gensio_filter_acc_alloc(const char *gensiotype,
+.br
+.B                          struct gensio_accepter *child,
+.br
+.B                          const char * const args[],
+.br
+.B                          struct gensio_os_funcs *o,
+.br
+.B                          gensio_accepter_event cb, void *user_data,
+.br
+.B                          struct gensio_accepter **accepter);
 .SH "DESCRIPTION"
 .B str_to_gensio_accepter
 allocates a new gensio accepter stack based upon the given string
 .B str.
+
+.B str_to_gensio_accepter_child
+allocates a new gensio accepter stack based upon the given string
+.B str
+and stacks it on top of the given child accepter.
+
+To allocate an accepter directly, use one of
+.B gensio_terminal_acc_alloc
+or
+.B gensio_filter_acc_alloc.
+A terminal accepter is one at the bottom of the stack.  The
+.B gdata
+parameter depends on the particular gensio.  For instance, for tcp it
+is a pointer to a gensio_addr structure.  For stdio it is an argv
+array.  See gensio.5 under "Direct Allocation" for the particular
+gensio for what gdata is.
+
+A filter accepter is one that has a child.  You can use these two
+functions to allocate an accepter stack directly, not using a string
+format.
 
 The
 .B cb
