pty,stdio: Change the way euid and uid are used
The way that was being use was to set the user of a new process was to
set the euid to the new uid and the code would handle it.  It would set
everything up and then set the uid to the euid.  That's ok for Linux,
which creates the pty as the real uid, but it's not ok for BSD, which
doesn't.

So, change the code to set the real userid to the one you want it to be
and leave the euid alone.  This will give you full privileges while
setting everything up.  Then grantpt() will set the pty's slave owner to
the real uid.  The code will then set the effective (and saved) uid to
the real one before the exec() call.  This will work under BSD.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -762,13 +762,13 @@ may shut down the gensio and possibly lose any output going to
 stdout.  Use the file gensio if you can.
 
 For connecting gensios, in the forked process, the code will set the
-uid and guid to the current set effective uid and guid if the
-effective and real uids are different.  This way a user can set the
-effective uid and gid to what they want the program to run under, but
-keep the uid and gid to the (probably root) values so they can be
-restored to those values after opening the pty.  The group list is
-also set to the groups the effective userid is in.  Note that nothing
-is done if the effective and real userids are the same.
+effective (and saved) uid and guid to the current real uid and guid if
+the effective and real uids are different.  This way a user can set
+the real uid and gid to what they want the program to run under, but
+keep the effective uid and gid to the (probably root) values so they
+can be restored to those values after opening the pty.  The group list
+is also set to the groups the real userid is in.  Note that nothing is
+done if the effective and real userids are the same.
 
 If you have both stdin/stdout and stderr opened, you must close both
 of them to completely close the gensio.  You cannot re-open the gensio
@@ -1313,14 +1313,14 @@ In Unix type systems, if the first character of the program is '-', it
 is removed from the execution of the command but left in argv[0].
 This will cause a shell to act as a login shell.
 
-On Unix, type systems, In the forked process, the pty code will set
-the uid and guid to the current set effective uid and guid if the
-effective and real uids are different.  This way a user can set the
-effective uid and gid to what the want to pty to run under, but keep
-the real uid and gid to the (probably root) values so they can be
-restored to those values after opening the pty.  The group list is
-also set to the groups the effective userid is in.  Note that nothing
-is done if the effective and real userids are the same.
+On Unix type systems, in the forked process, the code will set the
+effective (and saved) uid and guid to the current real uid and guid if
+the effective and real uids are different.  This way a user can set
+the real uid and gid to what they want the program to run under, but
+keep the effective uid and gid to the (probably root) values so they
+can be restored to those values after opening the pty.  The group list
+is also set to the groups the real userid is in.  Note that nothing is
+done if the effective and real userids are the same.
 
 On Windows, the new process is set to the user in the impersonation
 token if it is set.  In that case, the new process will be run in a
