sound: Add a simplified option
Make simple things simple.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -2089,6 +2089,12 @@ used instead of opening a file.
 The readbuf option is not available in this gensio, obviously.
 .SS Options
 .TP
+.b <samplerate>-<channels>-<format>
+For simple applications, the sound gensio takes a compact and simple
+format as an option.  It specifies those things for both the input and
+output channel.  So, for instance, "sound(44100-2-float)" would be
+CD-rate two channel using floating point numbers.
+.TP
 .B list[=yes|no]
 Instead of opening a sound device, the gensio will provide data about
 the various sound interfaces available.  Every other option but "type"
