fix typo paramters => parameters in gensio.5
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -737,7 +737,7 @@ The remote ID for the serial dev is the file descriptor returned as an
 integer.
 .SS "Direct Allocation"x
 Allocated as a terminal gensio with gdata as a "const char *" with the
-device and paramters string.
+device and parameters string.
 .SH "stdio"
 accepter =
 .B stdio[(options)]
