fix undefined .b macro warning in gensio.5

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -2089,7 +2089,7 @@ used instead of opening a file.
 The readbuf option is not available in this gensio, obviously.
 .SS Options
 .TP
-.b <samplerate>-<channels>-<format>
+.B <samplerate>-<channels>-<format>
 For simple applications, the sound gensio takes a compact and simple
 format as an option.  It specifies those things for both the input and
 output channel.  So, for instance, "sound(44100-2-float)" would be
