fix typo ouput => output in gensio.5
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -2121,7 +2121,7 @@ Defaults to 100.
 Set the number of input and output channels.  One of these must be
 specified, if you say
 .B chans
-it will set both the input and ouput number of channels.  If you only
+it will set both the input and output number of channels.  If you only
 specify in or out, the other is not enabled.
 .TP
 .B inrate=<n>, outrate=<n>, rate=<n>
